2007-04-30  Jakub Jelinek  <jakub@redhat.com>

	[BZ #4439]
	* resolv/inet_ntop.c (inet_ntop4): Take terminating '\0' into
	account in the size check.
	* resolv/tst-inet_ntop.c: New test.
	* resolv/Makefile (tests): Add tst-inet_ntop.

2007-04-30  Ulrich Drepper  <drepper@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	[BZ #4349]
	* malloc/malloc.c: Keep separate list for first blocks on the bin
	lists with a given size.  This helps skipping over list elements
	we know won't fit in two places.
	Inspired by a patch by Tomash Brechko <tomash.brechko@gmail.com>.

2007-04-28  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4102]
	* sysdeps/posix/getaddrinfo.c (default_labels): Assign separate
	label to Teredo tunnel addresses 2001://32.

2007-04-27  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/ld-collate.c (collate_read): Allow order_start
	after copy.

	* locale/programs/ld-collate.c (collate_read): Fix printing of
	error message.

	[BZ #3213]
	* locale/C-translit.h.in: Add entry for U2044.

	[BZ #4342]
	* stdio-common/vfscanf.c (_IO_vfscanf_internal): Allow
	hexa-decimal floats without exponent.
	* stdio-common/tstscanf.c (main): Adjust Test 8 test for success.

2007-04-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/sched.h: Declare sched_getcpu.
	* sysdeps/unix/sysv/linux/sched_getcpu.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/sched_getcpu.S: New file.
	* sysdeps/unix/sysv/linux/Versions: Export sched_getcpu for
	GLIBC_2.6.
	* sysdeps/unix/sysv/linux/Makefile [subdir=posix] (sysdep_routines):
	Add sched_getcpu.

2007-04-25  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/check_pf.c (make_request): Return -1 instead
	of 0 after the out_fail label.

2007-04-25  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4406]
	* iconv/gconv_charset.h (strip): Allow ':'.
	* iconv/iconv_open.c (iconv_open): Adjust comment.

2007-04-25  Jakub Jelinek  <jakub@redhat.com>
